fixed spacing on the homepage mailto UI

--- a/btr-pm/css/style.css
+++ b/btr-pm/css/style.css
@@ -49,7 +49,10 @@ body {
 
 #foot a {
   margin-right:15px !important;
+}
 
+#mailto > ul > li > div > img {
+    margin-right: 15px !important;
 }
 
 /*no footer for first 3 seconds*/
