--- a/btr-pm/projects/css/style.css
+++ b/btr-pm/projects/css/style.css
@@ -45,11 +45,3 @@ body {
   text-decoration: none;
   color:#666;
 }
-
-foot img {
-  width:20px;
-  height:20px;
-}
-
-
-
